--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm_initialize.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm_initialize.3.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfarm-initialize.3'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>26 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm_initialize</refentrytitle>
@@ -13,7 +13,7 @@
 
 <refnamediv id='name'>
 <refname>gfarm_initialize</refname>
-<refpurpose>initialization of Gfarm execution environment</refpurpose>
+<refpurpose>initialize the Gfarm execution environment for client</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -22,11 +22,10 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char * </returnvalue>gfarm_initialize</function></funcdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfarm_initialize</function></funcdef>
     <paramdef>int *<parameter>argcp</parameter></paramdef>
     <paramdef>char *** <parameter>argvp</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -34,8 +33,10 @@
 <!-- body begins here -->
 
 <refsect1 id='description'><title>DESCRIPTION</title>
-<para><function>gfarm_initialize()</function> initializes the execution environment for the
-Gfarm application.  <parameter>argcp</parameter> is a pointer to the number of
+<para><function>gfarm_initialize()</function> initializes the Gfarm
+execution environment for client application.
+This function should be called before any Gfarm library API.
+<parameter>argcp</parameter> is a pointer to the number of
 arguments and <parameter>argvp</parameter> is a pointer to the argument vector.</para>
 
 </refsect1>
@@ -44,24 +45,72 @@ arguments and <parameter>argvp</parameter> is a pointer to the argument vector.<
 <variablelist>
 
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>The function terminated successfully.</para>
 </listitem>
 </varlistentry>
-
 <varlistentry>
 <term><constant>GFARM_ERR_NO_MEMORY</constant></term>
 <listitem>
 <para>Insufficient memory was available.</para>
 </listitem>
 </varlistentry>
-
+<varlistentry>
+<term><constant>GFARM_ERR_UNKNOWN_HOST</constant></term>
+<listitem>
+<para>The metadata server cannot be resolved.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NETWORK_IS_UNREACHABLE</constant></term>
+<listitem>
+<para>Network is unrechable.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_TIMED_OUT</constant></term>
+<listitem>
+<para>Connetion timeout occurs.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL</constant></term>
+<listitem>
+<para>Protocol error occurs.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BROKEN_PIPE</constant></term>
+<listitem>
+<para>Connection to the metadata server is broken.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PERMISSION_DENIED</constant></term>
+<listitem>
+<para>The requested access to the file is not allowed, or one of the
+directories in <parameter>gfarm_url</parameter> did not allow search (execute)
+permission.  Or, the authentication to the metadata server fails.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL_NOT_SUPPORTED</constant></term>
+<listitem>
+<para>Specified authentication protocol is not supported.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_AUTHENTICATION</constant></term>
+<listitem>
+<para>User authentication failed when connecting to the metadata server.</para>
+</listitem>
+</varlistentry>
 <varlistentry>
 <term>Others</term>
 <listitem>
 <para>An error except the above occurred.  The reason is shown by its
-pointed strings.</para>
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>.</para>
 </listitem>
 </varlistentry>
 
