--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm_terminate.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfarm_terminate.3.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfarm-terminate.3'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>26 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfarm_terminate</refentrytitle>
@@ -13,7 +13,7 @@
 
 <refnamediv id='name'>
 <refname>gfarm_terminate</refname>
-<refpurpose>termination of Gfarm execution environment</refpurpose>
+<refpurpose>terminate the Gfarm execution environment for client</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -22,7 +22,7 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfarm_terminate</function></funcdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfarm_terminate</function></funcdef>
     <paramdef><parameter>void</parameter></paramdef>
 </funcprototype>
 
@@ -33,15 +33,15 @@
 <!-- body begins here -->
 
 <refsect1 id='description'><title>DESCRIPTION</title>
-<para><function>gfarm_terminate()</function> terminates the execution environment for the
-Gfarm application.</para>
+<para><function>gfarm_terminate()</function> terminates the Gfarm
+execution environment for client application.</para>
 
 </refsect1>
 
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>The function terminated successfully.</para>
 </listitem>
@@ -49,8 +49,8 @@ Gfarm application.</para>
 <varlistentry>
 <term>Others</term>
 <listitem>
-<para>An error except the above occurred.  The reason is shown by its
-pointed strings.</para>
+<para>An error except the above occurred.  The reason is shown by
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>.</para>
 </listitem>
 </varlistentry>
 </variablelist>
