--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_close.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_close.3.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfs-pio-close.3'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>27 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfs_pio_close</refentrytitle>
@@ -13,7 +13,7 @@
 
 <refnamediv id='name'>
 <refname>gfs_pio_close</refname>
-<refpurpose>close a Gfarm file</refpurpose>
+<refpurpose>close a file in the Gfarm file system</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -22,10 +22,9 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfs_pio_close</function></funcdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfs_pio_close</function></funcdef>
     <paramdef>GFS_File <parameter>gfp</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -41,9 +40,16 @@ refers to any file and may be reused.</para>
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>The function terminated successfully.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BAD_FILE_DESCRIPTOR</constant></term>
+<listitem>
+<para>The file descripter specified by <parameter>gfp</parameter> is
+not a valid open file descriptor.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -55,8 +61,8 @@ refers to any file and may be reused.</para>
 <varlistentry>
 <term>Others</term>
 <listitem>
-<para>An error except the above occurred.  The reason is shown by its
-pointed strings.</para>
+<para>An error except the above occurred.  The reason is shown by
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>.</para>
 </listitem>
 </varlistentry>
 </variablelist>
