--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_create.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_create.3.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfs-pio-create.3'>
 
-<refentryinfo><date>30 Oct 2004</date></refentryinfo>
+<refentryinfo><date>27 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfs_pio_create</refentrytitle>
@@ -13,7 +13,7 @@
 
 <refnamediv id='name'>
 <refname>gfs_pio_create</refname>
-<refpurpose>create a Gfarm file</refpurpose>
+<refpurpose>create a file in the Gfarm file system</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -22,13 +22,12 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfs_pio_create</function></funcdef>
-    <paramdef>char * <parameter>gfarm_url</parameter></paramdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfs_pio_create</function></funcdef>
+    <paramdef>const char * <parameter>gfarm_url</parameter></paramdef>
     <paramdef>int <parameter>flags</parameter></paramdef>
-    <paramdef>mode_t <parameter>mode</parameter></paramdef>
+    <paramdef>gfarm_mode_t <parameter>mode</parameter></paramdef>
     <paramdef>GFS_File * <parameter>gfp</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -36,7 +35,8 @@
 <!-- body begins here -->
 
 <refsect1 id='description'><title>DESCRIPTION</title>
-<para><function>gfs_pio_create()</function> creates a new Gfarm file whose name is the
+<para><function>gfs_pio_create()</function> creates a new file in the
+Gfarm file system whose name is the
 string pointed to by <parameter>gfarm_url</parameter> with the access mode <parameter>mode</parameter>,
 and returns a <parameter>GFS_File</parameter> structure to the address pointed to by
 <parameter>gfp</parameter>.  <parameter>Mode</parameter> specifies the file permissions to be created,
@@ -52,61 +52,29 @@ such that exactly one of
 <parameter>GFARM_FILE_WRONLY</parameter>, and
 <parameter>GFARM_FILE_RDWR</parameter>
 should be specified.
+<!--
 In addition, it is possible to specify
 <parameter>GFARM_FILE_EXCLUSIVE</parameter>.
 With this flag, 
 <function>gfs_pio_create()</function>
 will fail when the file already exists.
+ -->
 </para>
 <para>
 Note that
 <parameter>GFARM_FILE_TRUNC</parameter>
 must be explicitly specified by the
 <parameter>flags</parameter>
-argument since gfarm-1.0.4, if it's needed.
-Although this was implicitly assumed before.
+argument if needed.
 </para>
-
-<para>When <function>gfs_pio_create()</function> is used by parallel processes executed by
-gfrun(3) or gfmpirun_p4(3), each process should specify a consistent
-value for <parameter>mode</parameter>.  The returned <constant>GFS_File</constant> structure of each
-process has individual file pointers among parallel processes.</para>
-
 </refsect1>
 
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>The function terminated successfully.</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_NO_MEMORY</constant></term>
-<listitem>
-<para>Insufficient memory was available.</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_AUTHENTICATION</constant></term>
-<listitem>
-<para>User authentication failed when connecting to gfmd(8) or gfsd(8).</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_PERMISSION_DENIED</constant></term>
-<listitem>
-<para>The requested access to the file is not allowed, or one of the
-directories in <parameter>gfarm_url</parameter> did not allow search (execute)
-permission, or the file did not exist yet and write access to the
-parent directory is not allowed.</para>
-</listitem>
-</varlistentry>
-<varlistentry>
-<term><constant>GFARM_ERR_ALREADY_EXISTS</constant></term>
-<listitem>
-<para><parameter>gfarm_url</parameter> already exists and GFARM_FILE_EXCLUSIVE was used.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -116,9 +84,15 @@ parent directory is not allowed.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
-<term><constant>GFARM_ERR_NO_SUCH_OBJECT</constant></term>
+<term><constant>GFARM_ERR_IS_A_SYMBOLIC_LINK</constant></term>
 <listitem>
-<para>A component used as a directory in <parameter>gfarm_url</parameter> does not exist.</para>
+<para><parameter>gfarm_url</parameter> refers to a symbolic link.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_NOT_PERMITTED</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter> refers to not a regular file.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -128,6 +102,105 @@ parent directory is not allowed.</para>
 directory.</para>
 </listitem>
 </varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PERMISSION_DENIED</constant></term>
+<listitem>
+<para>The requested access to the file is not allowed, or one of the
+directories in <parameter>gfarm_url</parameter> did not allow search (execute)
+permission, or the file did not exist yet and write access to the
+parent directory is not allowed.
+Or, the authentication to the metadata server fails.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NO_MEMORY</constant></term>
+<listitem>
+<para>Insufficient memory was available.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_INVALID_ARGUMENT</constant></term>
+<listitem>
+<para><parameter>flags</parameter>
+is not valid.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_GFARM_URL_HOST_IS_MISSING</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter>
+does not include a metadata server.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_GFARM_URL_PORT_IS_MISSING</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter>
+does not include a port number of the metadata server.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_UNKNOWN_HOST</constant></term>
+<listitem>
+<para>The metadata server cannot be resolved.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_TOO_MANY_OPEN_FILES</constant></term>
+<listitem>
+<para>The process opens too many files.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_TOO_MANY_OPEN_FILES_IN_SYSTEM</constant></term>
+<listitem>
+<para>The system limit on the total number of open files has been reached.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NETWORK_IS_UNREACHABLE</constant></term>
+<listitem>
+<para>Network is unrechable.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_TIMED_OUT</constant></term>
+<listitem>
+<para>Connetion timeout occurs.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL</constant></term>
+<listitem>
+<para>Protocol error occurs.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BROKEN_PIPE</constant></term>
+<listitem>
+<para>Connection to the metadata server is broken.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_PROTOCOL_NOT_SUPPORTED</constant></term>
+<listitem>
+<para>Specified authentication protocol is not supported.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_AUTHENTICATION</constant></term>
+<listitem>
+<para>User authentication failed when connecting to the metadata server.</para>
+</listitem>
+</varlistentry>
+<!--
+<varlistentry>
+<term><constant>GFARM_ERR_ALREADY_EXISTS</constant></term>
+<listitem>
+<para><parameter>gfarm_url</parameter> already exists and GFARM_FILE_EXCLUSIVE was used.</para>
+</listitem>
+</varlistentry>
+ -->
 
 <!--
 <varlistentry>
@@ -147,8 +220,8 @@ write access was requested.
 <varlistentry>
 <term>Others</term>
 <listitem>
-<para>An error except the above occurred.  The reason is shown by its
-pointed strings.</para>
+<para>An error except the above occurred.  The reason is shown by
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>.</para>
 </listitem>
 </varlistentry>
 </variablelist>
@@ -169,11 +242,8 @@ pointed strings.</para>
 <citerefentry><refentrytitle>gfs_pio_puts</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_read</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_seek</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
-<citerefentry><refentrytitle>gfs_pio_set_view_index</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
-<citerefentry><refentrytitle>gfs_pio_set_view_local</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_ungetc</refentrytitle><manvolnum>3</manvolnum></citerefentry>,
 <citerefentry><refentrytitle>gfs_pio_write</refentrytitle><manvolnum>3</manvolnum></citerefentry>
 </para>
 </refsect1>
 </refentry>
-
