--- a/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_write.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man3/gfs_pio_write.3.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfs-pio-write.3'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>27 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfs_pio_write</refentrytitle>
@@ -22,13 +22,12 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfs_pio_write</function></funcdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfs_pio_write</function></funcdef>
     <paramdef>GFS_File <parameter>gf</parameter></paramdef>
-    <paramdef>void * <parameter>buffer</parameter></paramdef>
+    <paramdef>const void * <parameter>buffer</parameter></paramdef>
     <paramdef>int <parameter>size</parameter></paramdef>
     <paramdef>int * <parameter>np</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -45,9 +44,34 @@ bytes written to the address pointed by <parameter>np</parameter>.</para>
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>The function terminated successfully.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_OPERATION_NOT_PERMITTED</constant></term>
+<listitem>
+<para><parameter>gf</parameter> does not specify a regular file.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BAD_FILE_DESCRIPTOR</constant></term>
+<listitem>
+<para>The file descripter specified by <parameter>gfp</parameter> is
+not a valid or is not open for writing.</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NO_SPACE</constant></term>
+<listitem>
+<para>The file system node has no room to store data</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_NO_FILE_SYSTEM_NODE</constant></term>
+<listitem>
+<para>There is no available file system node.</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -59,8 +83,8 @@ bytes written to the address pointed by <parameter>np</parameter>.</para>
 <varlistentry>
 <term>Others</term>
 <listitem>
-<para>An error except the above occurred.  The reason is shown by its
-pointed strings.</para>
+<para>An error except the above occurred.  The reason is shown by
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>.</para>
 </listitem>
 </varlistentry>
 </variablelist>
@@ -74,4 +98,3 @@ pointed strings.</para>
 </para>
 </refsect1>
 </refentry>
-
