--- a/gfarm_v2/trunk/doc/docbook/ja/ref/man3/gfs_pio_close.3.docbook
+++ b/gfarm_v2/trunk/doc/docbook/ja/ref/man3/gfs_pio_close.3.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfs-pio-close.3'>
 
-<refentryinfo><date>1 May 2002</date></refentryinfo>
+<refentryinfo><date>27 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfs_pio_close</refentrytitle>
@@ -12,7 +12,7 @@
 
 <refnamediv id='name'>
 <refname>gfs_pio_close</refname>
-<refpurpose>Gfarmファイルのクローズ</refpurpose>
+<refpurpose>Gfarmファイルシステムのファイルのクローズ</refpurpose>
 </refnamediv>
 <refsynopsisdiv id='synopsis'>
 <funcsynopsis>
@@ -21,10 +21,9 @@
 </funcsynopsisinfo>
 
 <funcprototype>
-  <funcdef><function><returnvalue>char *</returnvalue>gfs_pio_close</function></funcdef>
+  <funcdef><function><returnvalue>gfarm_error_t</returnvalue> gfs_pio_close</function></funcdef>
     <paramdef>GFS_File <parameter>gfp</parameter></paramdef>
 </funcprototype>
-
 
 </funcsynopsis>
 </refsynopsisdiv>
@@ -41,9 +40,16 @@
 <refsect1 id='return-values'><title>RETURN VALUES</title>
 <variablelist>
 <varlistentry>
-<term><constant>NULL</constant></term>
+<term><constant>GFARM_ERR_NO_ERROR</constant></term>
 <listitem>
 <para>正常終了を示します。</para>
+</listitem>
+</varlistentry>
+<varlistentry>
+<term><constant>GFARM_ERR_BAD_FILE_DESCRIPTOR</constant></term>
+<listitem>
+<para><parameter>gfp</parameter>
+で指定されるファイルディスクリプタが不正です。</para>
 </listitem>
 </varlistentry>
 <varlistentry>
@@ -55,7 +61,10 @@
 <varlistentry>
 <term>その他</term>
 <listitem>
-<para>上記以外のエラーが生じたことを示します。</para>
+<para>上記以外のエラーが生じたことを示します。
+<citerefentry><refentrytitle>gfarm_error_string</refentrytitle><manvolnum>3</manvolnum></citerefentry>
+によりエラーの原因を文字列に変換することができます。
+</para>
 </listitem>
 </varlistentry>
 </variablelist>
@@ -68,4 +77,3 @@
 </para>
 </refsect1>
 </refentry>
-
