--- a/gfarm_v2/trunk/man/ja/man3/gfs_pio_create.3
+++ b/gfarm_v2/trunk/man/ja/man3/gfs_pio_create.3
@@ -3,15 +3,15 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFS_PIO_CREATE" "3" "31 October 2004" "Gfarm" ""
+.TH "GFS_PIO_CREATE" "3" "27 June 2010" "Gfarm" ""
 
 .SH NAME
-gfs_pio_create \- Gfarmファイルの作成
+gfs_pio_create \- Gfarmファイルシステムのファイルの作成
 .SH SYNOPSIS
 .sp
 \fB#include <gfarm/gfarm.h>
 .sp
-char *gfs_pio_create (char * \fIgfarm_url\fB, int \fIflags\fB, mode_t \fImode\fB, GFS_File * \fIgfp\fB);
+gfarm_error_t gfs_pio_create (const char * \fIgfarm_url\fB, int \fIflags\fB, gfarm_mode_t \fImode\fB, GFS_File * \fIgfp\fB);
 \fR
 .SH "DESCRIPTION"
 .PP
@@ -34,64 +34,85 @@ char *gfs_pio_create (char * \fIgfarm_url\fB, int \fIflags\fB, mode_t \fImode\fB
 \fIGFARM_FILE_WRONLY\fR、
 \fIGFARM_FILE_RDWR\fR
 のいずれか一つのフラグを必ず指定しなければならない点も同じです。
-ただし、
-\fBgfs_pio_create()\fR
-に特有のフラグとして、
-\fIGFARM_FILE_EXCLUSIVE\fR
-を指定することができます。この指定を行なった場合、
-ファイルが既に存在する場合は、ファイルのオープンに失敗します。
 .PP
-以前のバージョンでは、引数
+引数
 \fIflags\fR
 の値として
 \fIGFARM_FILE_TRUNC\fR
-が暗黙裡に仮定されていましたが、gfarm-1.0.4 以降は、
-明示的に指定しなければならなくなりましたので、ご注意ください。
-.PP
-gfrun(3) や gfmpirun_p4(3) で起動された並列プロセスで
-\fBgfs_pio_create()\fR
-を呼ぶ場合、それぞれのプロセスは引数
-\fImode\fR
-に、一貫した値を指定しなければなりません。
-また、この場合それぞれのプロセスの
-\fIGFS_File\fR
-構造体は個別ファイルポインタを持ちます。
+が必要な場合は、
+明示的に指定する必要がありますので、ご注意ください。
 .SH "RETURN VALUES"
 .TP
-\fBNULL\fR
+\fBGFARM_ERR_NO_ERROR\fR
 正常終了を示します。
+.TP
+\fBGFARM_ERR_IS_A_DIRECTORY\fR
+指定されたファイルはディレクトリです。
+.TP
+\fBGFARM_ERR_IS_A_SYMBOLIC_LINK\fR
+指定されたファイルはシンボリックリンクです。
+.TP
+\fBGFARM_ERR_OPERATION_NOT_PERMITTED\fR
+指定されたファイルはファイルではありません。
+.TP
+\fBGFARM_ERR_NOT_A_DIRECTORY\fR
+指定したパス名の親ディレクトリが、ディレクトリではありません。
+.TP
+\fBGFARM_ERR_PERMISSION_DENIED\fR
+指定されたファイルに対し、
+\fIflags\fR
+で指定されたモードでアクセスする権限がないか、その親ディレクトリへの
+書き込み権限がありません。
+あるいは、メタデータサーバへの認証に失敗しました。
 .TP
 \fBGFARM_ERR_NO_MEMORY\fR
 メモリ不足のため処理を中止しました。
 .TP
-\fBGFARM_ERR_AUTHENTICATION\fR
-gfmd(8) あるいは gfsd(8) に対するユーザー認証が失敗しました。
-.TP
-\fBGFARM_ERR_PERMISSION_DENIED\fR
-\fIgfarm_url\fRへ、
+\fBGFARM_ERR_INVALID_ARGUMENT\fR
 \fIflags\fR
-で指定されたモードでアクセスする権限がないか、その親ディレクトリへの
-書き込み権限がありません。
+の指定が不正です。
 .TP
-\fBGFARM_ERR_ALREADY_EXISTS\fR
-\fIflags\fR引数に
-GFARM_FILE_EXCLUSIVEフラグが指定されたが、
-ファイルが既に存在しました。
-.TP
-\fBGFARM_ERR_IS_A_DIRECTORY\fR
-指定された
+\fBGFARM_ERR_GFARM_URL_HOST_IS_MISSING\fR
 \fIgfarm_url\fR
-は、ディレクトリです。
+で指定されたGfarm URLにおいて、
+メタデータサーバが指定されていません。
 .TP
-\fBGFARM_ERR_NO_SUCH_OBJECT\fR
-指定したパス名の親ディレクトリが、実際には存在しなかったことを示します。
+\fBGFARM_ERR_GFARM_URL_PORT_IS_MISSING\fR
+\fIgfarm_url\fR
+で指定されたGfarm URLにおいて、
+メタデータサーバのポート番号が指定されていません。
 .TP
-\fBGFARM_ERR_NOT_A_DIRECTORY\fR
-指定したパス名の親ディレクトリが、実際にはディレクトリでなかったことを
-示します。
+\fBGFARM_ERR_UNKNOWN_HOST\fR
+指定されたメタデータサーバのアドレス解決ができません。
+.TP
+\fBGFARM_ERR_TOO_MANY_OPEN_FILES\fR
+プロセスにおけるオープン可能なファイル数の限界に達しました。
+.TP
+\fBGFARM_ERR_TOO_MANY_OPEN_FILES_IN_SYSTEM\fR
+システムにおけるオープンできるファイル数の限界に達しました。
+.TP
+\fBGFARM_ERR_NETWORK_IS_UNREACHABLE\fR
+メタデータサーバに到達できません。
+.TP
+\fBGFARM_ERR_OPERATION_TIMED_OUT\fR
+メタデータサーバへの接続がタイムアウトをおこしました。
+.TP
+\fBGFARM_ERR_PROTOCOL\fR
+メタデータサーバとの通信にプロトコルエラーが発生しました。
+.TP
+\fBGFARM_ERR_BROKEN_PIPE\fR
+メタデータサーバとの通信が切断しました。
+.TP
+\fBGFARM_ERR_PROTOCOL_NOT_SUPPORTED\fR
+指定された認証プロトコルはサポートしていません。
+.TP
+\fBGFARM_ERR_AUTHENTICATION\fR
+メタデータサーバに対する認証に失敗しました。
 .TP
 \fBその他\fR
 上記以外のエラーが生じたことを示します。
+\fBgfarm_error_string\fR(3)
+によりエラーの原因を文字列に変換することができます。
 .SH "SEE ALSO"
 .PP
 \fBgfs_pio_close\fR(3),
@@ -107,7 +128,5 @@ GFARM_FILE_EXCLUSIVEフラグが指定されたが、
 \fBgfs_pio_puts\fR(3),
 \fBgfs_pio_read\fR(3),
 \fBgfs_pio_seek\fR(3),
-\fBgfs_pio_set_view_index\fR(3),
-\fBgfs_pio_set_view_local\fR(3),
 \fBgfs_pio_ungetc\fR(3),
 \fBgfs_pio_write\fR(3)
