--- a/gfarm_v2/trunk/man/ja/man3/gfs_pio_open.3
+++ b/gfarm_v2/trunk/man/ja/man3/gfs_pio_open.3
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFS_PIO_OPEN" "3" "26 June 2010" "Gfarm" ""
+.TH "GFS_PIO_OPEN" "3" "27 June 2010" "Gfarm" ""
 
 .SH NAME
 gfs_pio_open \- Gfarmファイルシステムのファイルのオープン
@@ -59,6 +59,12 @@ gfarm://metaserver:port/path/name
 \fBGFARM_ERR_NOT_A_DIRECTORY\fR
 指定したパス名の親ディレクトリが、ディレクトリではありません。
 .TP
+\fBGFARM_ERR_PERMISSION_DENIED\fR
+指定されたファイルに対し、
+\fIflags\fR
+で指定されたモードでアクセスする権限がないか、
+メタデータサーバへの認証に失敗しました。
+.TP
 \fBGFARM_ERR_NO_MEMORY\fR
 メモリ不足のため処理を中止しました。
 .TP
@@ -97,12 +103,6 @@ gfarm://metaserver:port/path/name
 \fBGFARM_ERR_BROKEN_PIPE\fR
 メタデータサーバとの通信が切断しました。
 .TP
-\fBGFARM_ERR_PERMISSION_DENIED\fR
-指定されたファイルに対し、
-\fIflags\fR
-で指定されたモードでアクセスする権限がないか、
-メタデータサーバへの認証に失敗しました。
-.TP
 \fBGFARM_ERR_PROTOCOL_NOT_SUPPORTED\fR
 指定された認証プロトコルはサポートしていません。
 .TP
@@ -111,7 +111,8 @@ gfarm://metaserver:port/path/name
 .TP
 \fBその他\fR
 上記以外のエラーが生じたことを示します。
-\fBgfarm_error_string\fR(3)によりエラーの原因を文字列に変換することができます。
+\fBgfarm_error_string\fR(3)
+によりエラーの原因を文字列に変換することができます。
 .SH "SEE ALSO"
 .PP
 \fBgfs_pio_close\fR(3),
