--- a/gfarm_v2/trunk/man/man3/gfs_pio_close.3
+++ b/gfarm_v2/trunk/man/man3/gfs_pio_close.3
@@ -3,14 +3,15 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFS_PIO_CLOSE" "3" "18 March 2003" "Gfarm" ""
+.TH "GFS_PIO_CLOSE" "3" "27 June 2010" "Gfarm" ""
+
 .SH NAME
-gfs_pio_close \- close a Gfarm file
+gfs_pio_close \- close a file in the Gfarm file system
 .SH SYNOPSIS
 .sp
 \fB#include <gfarm/gfarm.h>
 .sp
-char *gfs_pio_close (GFS_File \fIgfp\fB);
+gfarm_error_t gfs_pio_close (GFS_File \fIgfp\fB);
 \fR
 .SH "DESCRIPTION"
 .PP
@@ -18,15 +19,19 @@ char *gfs_pio_close (GFS_File \fIgfp\fB);
 refers to any file and may be reused.
 .SH "RETURN VALUES"
 .TP
-\fBNULL\fR
+\fBGFARM_ERR_NO_ERROR\fR
 The function terminated successfully.
+.TP
+\fBGFARM_ERR_BAD_FILE_DESCRIPTOR\fR
+The file descripter specified by \fIgfp\fR is
+not a valid open file descriptor.
 .TP
 \fBGFARM_ERR_NO_MEMORY\fR
 Insufficient memory was available.
 .TP
 \fBOthers\fR
-An error except the above occurred.  The reason is shown by its
-pointed strings.
+An error except the above occurred.  The reason is shown by
+\fBgfarm_error_string\fR(3)\&.
 .SH "SEE ALSO"
 .PP
 \fBgfs_pio_create\fR(3),
