--- a/gfarm_v2/trunk/man/man3/gfs_pio_open.3
+++ b/gfarm_v2/trunk/man/man3/gfs_pio_open.3
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFS_PIO_OPEN" "3" "26 June 2010" "Gfarm" ""
+.TH "GFS_PIO_OPEN" "3" "27 June 2010" "Gfarm" ""
 
 .SH NAME
 gfs_pio_open \- open a file in the Gfarm file system
@@ -59,6 +59,11 @@ A component used as a directory in \fIgfarm_url\fR does not exist.
 A component used as a directory in \fIgfarm_url\fR is not, in fact, a
 directory.
 .TP
+\fBGFARM_ERR_PERMISSION_DENIED\fR
+The requested access to the file is not allowed, or one of the
+directories in \fIgfarm_url\fR did not allow search (execute)
+permission.  Or, the authentication to the metadata server fails.
+.TP
 \fBGFARM_ERR_NO_MEMORY\fR
 Insufficient memory was available.
 .TP
@@ -95,11 +100,6 @@ Protocol error occurs.
 \fBGFARM_ERR_BROKEN_PIPE\fR
 Connection to the metadata server is broken.
 .TP
-\fBGFARM_ERR_PERMISSION_DENIED\fR
-The requested access to the file is not allowed, or one of the
-directories in \fIgfarm_url\fR did not allow search (execute)
-permission.  Or, the authentication to the metadata server fails.
-.TP
 \fBGFARM_ERR_PROTOCOL_NOT_SUPPORTED\fR
 Specified authentication protocol is not supported.
 .TP
@@ -108,7 +108,7 @@ User authentication failed when connecting to the metadata server.
 .TP
 \fBOthers\fR
 An error except the above occurred.  The reason is shown by
-gfarm_error_string(3).
+\fBgfarm_error_string\fR(3)\&.
 .SH "SEE ALSO"
 .PP
 \fBgfs_pio_close\fR(3),
