--- a/gfarm_v2/trunk/man/man3/gfs_pio_read.3
+++ b/gfarm_v2/trunk/man/man3/gfs_pio_read.3
@@ -3,32 +3,43 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFS_PIO_READ" "3" "18 March 2003" "Gfarm" ""
+.TH "GFS_PIO_READ" "3" "27 June 2010" "Gfarm" ""
+
 .SH NAME
 gfs_pio_read \- binary stream input
 .SH SYNOPSIS
 .sp
 \fB#include <gfarm/gfarm.h>
 .sp
-char *gfs_pio_read (GFS_File \fIgf\fB, void * \fIbuffer\fB, int \fIsize\fB, int * \fInp\fB);
+gfarm_error_t gfs_pio_read (GFS_File \fIgf\fB, void * \fIbuffer\fB, int \fIsize\fB, int * \fInp\fB);
 \fR
 .SH "DESCRIPTION"
 .PP
 \fBgfs_pio_read()\fR attempts to read up to \fIsize\fR bytes from the
 file referenced by \fIgf\fR into the buffer starting at \fIbuffer\fR,
 and returns the number of bytes read to the address pointed by
-\fInp\fR.  On end of file, the number of bytes read is zero.
+\fInp\fR\&.  On end of file, the number of bytes read is zero.
 .SH "RETURN VALUES"
 .TP
-\fBNULL\fR
+\fBGFARM_ERR_NO_ERROR\fR
 The function terminated successfully.
+.TP
+\fBGFARM_ERR_OPERATION_NOT_PERMITTED\fR
+\fIgf\fR does not specify a regular file.
+.TP
+\fBGFARM_ERR_BAD_FILE_DESCRIPTOR\fR
+The file descripter specified by \fIgf\fR is
+not a valid or is not open for reading.
+.TP
+\fBGFARM_ERR_NO_FILE_SYSTEM_NODE\fR
+There is no available file system node.
 .TP
 \fBGFARM_ERR_NO_MEMORY\fR
 Insufficient memory was available.
 .TP
 \fBOthers\fR
-An error except the above occurred.  The reason is shown by its
-pointed strings.
+An error except the above occurred.  The reason is shown by
+\fBgfarm_error_string\fR(3)\&.
 .SH "SEE ALSO"
 .PP
 \fBgfs_pio_create\fR(3),
