--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsched.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfsched.1.docbook
@@ -3,7 +3,7 @@
 
 <refentry id='gfsched.1'>
 
-<refentryinfo><date>28 Ju 2010</date></refentryinfo>
+<refentryinfo><date>28 Jun 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfsched</refentrytitle>
@@ -15,7 +15,7 @@
 <refname>gfsched</refname>
 <refpurpose>
 <!-- create a host file using file-affinity scheduling -->
-schedule and display available filesystem nodes
+schedule and display available file system nodes
 </refpurpose>
 </refnamediv>
 
@@ -27,7 +27,8 @@ schedule and display available filesystem nodes
     <arg choice='opt'>-I <replaceable>fragment-index</replaceable></arg>
     <arg choice='opt'>-p <replaceable>gfarm-program-URL</replaceable></arg>
    -->
-    <arg choice='opt'>-f <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='plain'>-f <replaceable>gfarm-URL</replaceable></arg>
+    <arg choice='opt'>-D <replaceable>domain-name</replaceable></arg>
     <arg choice='opt'>-n <replaceable>number</replaceable></arg>
     <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
@@ -39,7 +40,7 @@ schedule and display available filesystem nodes
     <arg choice='opt'>-p <replaceable>gfarm-program-URL</replaceable></arg>
    -->
     <arg choice='opt'>-P <replaceable>gfarm-URL</replaceable></arg>
-    <arg choice='opt'>-D <replaceable>number</replaceable></arg>
+    <arg choice='opt'>-D <replaceable>domain-name</replaceable></arg>
     <arg choice='opt'>-n <replaceable>number</replaceable></arg>
     <arg choice='opt'>-LMlw</arg>
 </cmdsynopsis>
@@ -51,8 +52,8 @@ schedule and display available filesystem nodes
 <refsect1 id='description'><title>DESCRIPTION</title>
 <para>
   The <command>gfsched</command> command
-  with a <option>-f</option> <parameter>gfarm-URL</parameter> option
-  displays available filesystem nodes which have a file replica of the
+  with the <option>-f</option> <parameter>gfarm-URL</parameter> option
+  displays available file system nodes which have a file replica of the
   specified gfarm-URL.
 <!--
   The <command>gfsched</command> command displays a host list
@@ -65,10 +66,10 @@ schedule and display available filesystem nodes
 </para>
 
 <para>
-  When a <option>-f</option> <parameter>gfarm-URL</parameter> option
+  When the <option>-f</option> <parameter>gfarm-URL</parameter> option
   is not specified, the <command>gfsched</command> command just displays
-  available filesystem nodes.  In this case, you can specify a metadata
-  server by a <option>-P</option> <parameter>gfarm-URL</parameter> option,
+  available file system nodes.  In this case, you can specify a metadata
+  server by the <option>-P</option> <parameter>gfarm-URL</parameter> option,
   if necessary.
 </para>
 
@@ -103,11 +104,9 @@ will be selected, if this option is specified.
 -->
 
 <varlistentry>
-<term><option>-D</option> <parameter>domain-name4</parameter></term>
+<term><option>-D</option> <parameter>domain-name</parameter></term>
 <listitem>
-<para>Limits filesystem node by specifying a domain name or a hostname.
-</para>
-<para>Currently, this option doesn't work with the <option>-f</option> option.
+<para>Limits file system node by specifying a domain name or a hostname.
 </para>
 </listitem>
 </varlistentry>
@@ -142,7 +141,7 @@ fails authentication with the user may be scheduled.
 <listitem>
 <para>Specifies a <parameter>gfarm-URL</parameter> or a pathname
 to identify a metadata server which is used for the scheduling.
-This option conflicts with an <option>-f</option>.
+This option conflicts with the <option>-f</option> option.
 </para>
 </listitem>
 </varlistentry>
@@ -150,9 +149,9 @@ This option conflicts with an <option>-f</option>.
 <varlistentry>
 <term><option>-f</option> <parameter>gfarm-URL</parameter></term>
 <listitem>
-<para>The <command>gfsched</command> command schedules filesystem nodes
+<para>The <command>gfsched</command> command schedules file system nodes
 which have a replica of a file specified by this option.
-This option conflicts with a <option>-P</option> option.
+This option conflicts with the <option>-P</option> option.
 </para>
 </listitem>
 </varlistentry>
@@ -170,7 +169,7 @@ Note that the display format of this option may be changed in future.
 <varlistentry>
 <term><option>-n</option> <parameter>number</parameter></term>
 <listitem>
-<para>Displays specified number of filesystem nodes at most.
+<para>Displays specified number of file system nodes at most.
 If this option is not specified, it displays all available nodes.
 </para>
 </listitem>
@@ -180,13 +179,13 @@ If this option is not specified, it displays all available nodes.
 <term><option>-w</option></term>
 <listitem>
 <para>Schedules with write-mode.
-When this option is specified, filesystem nodes which don't have
+When this option is specified, file system nodes which don't have
 enough free space won't be displayed.
 </para>
 <para>
-When both this option and an <option>-f</option> are specified,
+When both this option and the <option>-f</option> are specified,
 and if the file is already opened by an existing process with write-mode,
-the <command>gfsched</command> command only displays one filesystem node
+the <command>gfsched</command> command only displays one file system node
 which is assigned for writing to the file.
 </para>
 </listitem>
@@ -204,7 +203,7 @@ which is assigned for writing to the file.
 
 <refsect1 id='examples'><title>EXAMPLES</title>
 <para>
-The following is an example to inquire filesystem nodes that the metadata
+The following is an example to inquire file system nodes that the metadata
 server thinks they are currently working.
 </para>
 <literallayout>
