--- a/gfarm_v2/trunk/man/man1/gfsched.1
+++ b/gfarm_v2/trunk/man/man1/gfsched.1
@@ -3,35 +3,33 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSCHED" "1" "28 June 2010" "Gfarm" ""
+.TH "GFSCHED" "1" "30 June 2010" "Gfarm" ""
 
 .SH NAME
-gfsched \- schedule and display available filesystem nodes
+gfsched \- schedule and display available file system nodes
 .SH SYNOPSIS
 
-\fBgfsched\fR [ \fB-f \fIgfarm-URL\fB\fR ] [ \fB-n \fInumber\fB\fR ] [ \fB-LMlw\fR ]
+\fBgfsched\fR \fB-f \fIgfarm-URL\fB\fR [ \fB-D \fIdomain-name\fB\fR ] [ \fB-n \fInumber\fB\fR ] [ \fB-LMlw\fR ]
 
 
-\fBgfsched\fR [ \fB-P \fIgfarm-URL\fB\fR ] [ \fB-D \fInumber\fB\fR ] [ \fB-n \fInumber\fB\fR ] [ \fB-LMlw\fR ]
+\fBgfsched\fR [ \fB-P \fIgfarm-URL\fB\fR ] [ \fB-D \fIdomain-name\fB\fR ] [ \fB-n \fInumber\fB\fR ] [ \fB-LMlw\fR ]
 
 .SH "DESCRIPTION"
 .PP
 The \fBgfsched\fR command
-with a \fB-f\fR \fIgfarm-URL\fR option
-displays available filesystem nodes which have a file replica of the
+with the \fB-f\fR \fIgfarm-URL\fR option
+displays available file system nodes which have a file replica of the
 specified gfarm-URL.
 .PP
-When a \fB-f\fR \fIgfarm-URL\fR option
+When the \fB-f\fR \fIgfarm-URL\fR option
 is not specified, the \fBgfsched\fR command just displays
-available filesystem nodes.  In this case, you can specify a metadata
-server by a \fB-P\fR \fIgfarm-URL\fR option,
+available file system nodes.  In this case, you can specify a metadata
+server by the \fB-P\fR \fIgfarm-URL\fR option,
 if necessary.
 .SH "OPTIONS"
 .TP
-\fB-D \fIdomain-name4\fB\fR
-Limits filesystem node by specifying a domain name or a hostname.
-
-Currently, this option doesn't work with the \fB-f\fR option.
+\fB-D \fIdomain-name\fB\fR
+Limits file system node by specifying a domain name or a hostname.
 .TP
 \fB-L\fR
 Suppresses authentication check.
@@ -51,12 +49,12 @@ fails authentication with the user may be scheduled.
 \fB-P \fIgfarm-URL\fB\fR
 Specifies a \fIgfarm-URL\fR or a pathname
 to identify a metadata server which is used for the scheduling.
-This option conflicts with an \fB-f\fR\&.
+This option conflicts with the \fB-f\fR option.
 .TP
 \fB-f \fIgfarm-URL\fB\fR
-The \fBgfsched\fR command schedules filesystem nodes
+The \fBgfsched\fR command schedules file system nodes
 which have a replica of a file specified by this option.
-This option conflicts with a \fB-P\fR option.
+This option conflicts with the \fB-P\fR option.
 .TP
 \fB-l\fR
 Long format.
@@ -64,24 +62,24 @@ This option displays port numbers as well as hostnames.
 Note that the display format of this option may be changed in future.
 .TP
 \fB-n \fInumber\fB\fR
-Displays specified number of filesystem nodes at most.
+Displays specified number of file system nodes at most.
 If this option is not specified, it displays all available nodes.
 .TP
 \fB-w\fR
 Schedules with write-mode.
-When this option is specified, filesystem nodes which don't have
+When this option is specified, file system nodes which don't have
 enough free space won't be displayed.
 
-When both this option and an \fB-f\fR are specified,
+When both this option and the \fB-f\fR are specified,
 and if the file is already opened by an existing process with write-mode,
-the \fBgfsched\fR command only displays one filesystem node
+the \fBgfsched\fR command only displays one file system node
 which is assigned for writing to the file.
 .TP
 \fB-?\fR
 Displays a list of command options.
 .SH "EXAMPLES"
 .PP
-The following is an example to inquire filesystem nodes that the metadata
+The following is an example to inquire file system nodes that the metadata
 server thinks they are currently working.
 
 .nf
