--- a/gfarm_v2/branches/2.3.2/man/ja/man1/gfsched.1
+++ b/gfarm_v2/branches/2.3.2/man/ja/man1/gfsched.1
@@ -3,46 +3,82 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSCHED" "1" "22 August 2003" "Gfarm" ""
+.TH "GFSCHED" "1" "01 July 2010" "Gfarm" ""
 
 .SH NAME
-gfsched \- ファイル・アフィニティ・スケジューリングによりホストリストを作成
+gfsched \- ファイルシステムノードをスケジューリングし、利用可能なノードを表示
 .SH SYNOPSIS
 
-\fBgfsched\fR [ \fB-U\fR ] [ \fB-I \fIフラグメント番号\fB\fR ] [ \fB-p \fIプログラムURL\fB\fR ] \fB\fIgfarm-URL\fB\fR [ \fB\fIoutput-hostfile\fB\fR ]
+\fBgfsched\fR \fB-f \fIgfarm-URL\fB\fR [ \fB-D \fIドメイン名\fB\fR ] [ \fB-n \fIノード数\fB\fR ] [ \fB-LMlw\fR ]
 
 
-\fBgfsched\fR [ \fB-U\fR ] \fB-N \fIノード数\fB\fR [ \fB-p \fIプログラムURL\fB\fR ] [ \fB\fIホスト名\fB\fR\fI ...\fR ]
+\fBgfsched\fR [ \fB-P \fIgfarm-URL\fB\fR ] [ \fB-D \fIドメイン名\fB\fR ] [ \fB-n \fIノード数\fB\fR ] [ \fB-LMlw\fR ]
 
 .SH "DESCRIPTION"
 .PP
-\fIgfarm-URL\fR を指定した場合、
-そのgfarmファイルに対する
-ファイル・アフィニティ・スケジューリングによりホストリストを作成します。
-すなわち、そのgfarmファイル・フラグメントを保持するホストをできる限り
-優先して、フラグメント数と等しい数のホストを選んで表示します。
-\fIoutput-hostfile\fR が省略された場合、
-標準出力にホストリストを表示します。
+\fBgfsched\fR に
+\fB-f\fR \fIgfarm-URL\fR オプションを
+指定した場合、そのgfarmファイルを保持するファイルシステムノードの
+うちで、現在利用可能なもの表示します。
 .PP
-\fIgfarm-URL\fR を指定するのではなく、
-\fB-N\fR でホスト数を指定した場合、
-引数で指定したホストの中から、指定した数のホストを選んで表示します。
-ホストの指定を省略した場合、登録されている全てのホストから指定した
-数のホストを選びます。
+\fB-f\fRオプションを指定しなかった場合、利用可能な
+ファイルシステムノードを表示します。この場合、
+\fB-P\fR \fIgfarm-URL\fR オプションで
+パス名か gfarm URL を指定することにより、表示対象のメタデータサーバを
+切替えることができます。
 .SH "OPTIONS"
 .TP
-\fB-I \fIフラグメント番号\fB\fR
-特定のファイル断片についてホストを1つ選択します。
+\fB-D \fIドメイン名\fB\fR
+ドメイン名ないしホスト名を指定し、検索対象のファイルシステムノードを
+絞ります。
 .TP
-\fB-U\fR
+\fB-L\fR
 そのホストに対して、認証が成功するか否かの確認を省略します。
 高速になりますが、認証不能なホストがスケジューリングされてしまう
 危険があります。
 .TP
-\fB-p \fIプログラムURL\fB\fR
-そのファイルを処理するプログラム名を指定して、ホストリストを作成します。
-すなわち、選択されるホストを、このオプションで指定したプログラムを実行可能な
-アーキテクチャだけに限定します。
+\fB-M\fR
+メタデータサーバに問い合わせた結果のみを表示し、クライアント側での
+スケジューリング処理を行ないません。
+このオプションを指定すると、動作は高速になりますが、ネットワーク的に到
+達不能なホストや、認証不能なホストが表示される危険があります。
+.TP
+\fB-P \fIgfarm-URL\fB\fR
+ファイルシステムノードを管理するメタデータサーバを特定する
+ために、gfarm-URL ないしパス名を指定します。
+このオプションは、\fB-f\fR オプションと排他的です。
+.TP
+\fB-f \fIgfarm-URL\fB\fR
+指定したファイルについて、その複製を保持するファイルシステムノードを
+検索します。
+このオプションは、\fB-P\fR オプションと排他的です。
+.TP
+\fB-l\fR
+ホスト名のみならず、ポート番号も表示します。
+このオプションの表示形式は、将来変更される可能性がありますのでご注意ください。
+.TP
+\fB-n \fIノード数\fB\fR
+指定した数をファイルシステムノードの表示を試みます。
+ノード数がその数に満たない場合には、そこで表示を打ち切ります。
+このオプションを指定しない場合、条件を満たす全ノードを表示します。
+.TP
+\fB-w\fR
+ファイルの書き込みを行なう前提で、スケジューリングを行ないます。
+このオプションを指定した場合、ディスクの空き容量が足りないファイルシステム
+ノードは除外されます。
+
+このオプションと、\fB-f\fR オプションを同時に指定し、
+かつ、そのファイルが既存のプロセスによって書き込みオープンされている場合には、
+\fB-n\fR の指定に関わらず、現在このファイルの書き込み用に
+割り当てられているファイルシステムノード 1つのみを表示します。
 .TP
 \fB-?\fR
 引数オプションを表示します。
+.SH "EXAMPLES"
+.PP
+以下は、メタデータサーバが動作中であると把握している、ファイルシステムノードを
+問い合わせる例です。
+
+.nf
+$ gfsched -M
+.fi
