--- a/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfdf.1.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man1/gfdf.1.docbook
@@ -2,7 +2,7 @@
 
 <refentry id='gfdf.1'>
 
-<refentryinfo><date>14 May 2008</date></refentryinfo>
+<refentryinfo><date>2 Sep 2010</date></refentryinfo>
 
 <refmeta>
 <refentrytitle>gfdf</refentrytitle>
@@ -20,6 +20,7 @@
   <command>gfdf</command>
     <arg choice='opt'>-a</arg>
     <arg choice='opt'>-n</arg>
+    <arg choice='opt'>-P <replaceable>path</replaceable></arg>
     <arg choice='opt'>-D <replaceable>domainname</replaceable></arg>
 </cmdsynopsis>
 </refsynopsisdiv>
@@ -44,6 +45,17 @@ Gfarm file system.
 <term><option>-n</option></term>
 <listitem>
 <para>Displays hostnames of available Gfarm file system nodes.</para>
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><option>-P</option> <parameter>path</parameter></term>
+<listitem>
+<para>
+Specifies a path name to specify a metadata server instead of the root
+metadata server.  Note that this option is not effective with the -a
+option.
+</para>
 </listitem>
 </varlistentry>
 
