--- a/gfarm_v2/branches/2.3/man/man5/gfarm2.conf.5
+++ b/gfarm_v2/branches/2.3/man/man5/gfarm2.conf.5
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFARM2.CONF" "5" "23 June 2010" "Gfarm" ""
+.TH "GFARM2.CONF" "5" "24 November 2010" "Gfarm" ""
 
 .SH NAME
 gfarm2.conf \- Gfarm configuration file
@@ -564,6 +564,19 @@ For example,
 	sockopt rcvbuf=1048576 LISTENER
 .fi
 .TP
+\fBknown_network \fIHost_specification\fB\fR
+The known_network statement specifies a network
+address for file system nodes.  It is used to group file system nodes
+at file systen node scheduling.
+File system nodes that are not specified in this directive are assumed
+to be in an IPv4 class C network.
+
+For example,
+
+.nf
+	known_network 192.168.0.0/24
+.fi
+.TP
 \fBadmin_user \fIuser\fB\fR
 This directive specifies an administrator user name, which is
 specified in gfmd.conf.
@@ -807,6 +820,7 @@ notation.
 		\~\~<postgresql_conninfo_statement> |
 		\~\~<auth_statement> |
 		\~\~<sockopt_statement> |
+		\~\~<known_network_statement> |
 		\~\~<admin_user_statement> |
 		\~\~<admin_user_gsi_dn_statement> |
 		\~\~<local_user_map_statement> |
@@ -867,6 +881,7 @@ notation.
 		\~\~"sockopt" <socket_option>[=<number>] [""LISTENER" | <hostspec>]
 	<socket_option> = "debug" | "keepalive" | "sndbuf" | "rcvbuf" |
 		\~\~"tcp_nodelay"
+	<known_network_statement> ::= "known_network" <hostspec>
 	<admin_user_statement> ::= "admin_user" <string>
 	<admin_user_gsi_dn_statement> ::= "admin_user_gsi_dn" <string>
 	<local_user_map_statement> ::= "local_user_map" <pathname>
