--- a/gfarm_v2/trunk/man/man1/gfdf.1
+++ b/gfarm_v2/trunk/man/man1/gfdf.1
@@ -3,13 +3,13 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFDF" "1" "02 September 2010" "Gfarm" ""
+.TH "GFDF" "1" "29 November 2010" "Gfarm" ""
 
 .SH NAME
 gfdf \- display disk free space of Gfarm file system
 .SH SYNOPSIS
 
-\fBgfdf\fR [ \fB-a\fR ] [ \fB-n\fR ] [ \fB-P \fIpath\fB\fR ] [ \fB-D \fIdomainname\fB\fR ]
+\fBgfdf\fR [ \fB\fIoptions\fB\fR ]
 
 .SH "DESCRIPTION"
 .PP
@@ -22,6 +22,12 @@ Displays only summary information of the Gfarm file system.
 .TP
 \fB-n\fR
 Displays hostnames of available Gfarm file system nodes.
+.TP
+\fB-r\fR
+Sort output in the reverse order.
+.TP
+\fB-S\fR
+Sort output in the increasing order of the available disk capacity.
 .TP
 \fB-P \fIpath\fB\fR
 Specifies a path name to specify a metadata server instead of the root
