minimum_free_disk_space should be specified in gfmd.conf

--- a/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
+++ b/gfarm_v2/trunk/doc/docbook/en/ref/man5/gfarm2.conf.5.docbook
@@ -1019,6 +1019,10 @@ The free space value may have a suffix like ``k'' (kilo bytes),
 ``M'' (mega bytes), ``G'' (giga bytes) and ``T'' (tera bytes).
 The default size is 128M bytes.
 </para>
+<para>
+This directive is available in gfmd.conf.  After restarting the gfmd,
+it is effective.
+</para>
 <para>For example,</para>
 <literallayout>
 	minimum_free_disk_space 1G
