regen.  HTML docs for gfsd(8) and gfmd(8) are really old.

--- a/gfarm_v2/trunk/man/man8/gfmd.8
+++ b/gfarm_v2/trunk/man/man8/gfmd.8
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFMD" "8" "14 2·î 2008" "Gfarm" ""
+.TH "GFMD" "8" "20 December 2010" "Gfarm" ""
 
 .SH NAME
 gfmd(8) \- Gfarm metadata server
