--- a/gfarm_v2/trunk/man/man8/gfsd.8
+++ b/gfarm_v2/trunk/man/man8/gfsd.8
@@ -3,7 +3,7 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSD" "8" "16 2·î 2008" "Gfarm" ""
+.TH "GFSD" "8" "20 December 2010" "Gfarm" ""
 
 .SH NAME
 gfsd(8) \- Gfarm filesystem daemon
