--- a/gfarm_v2/trunk/man/ja/man1/gfsched.1
+++ b/gfarm_v2/trunk/man/ja/man1/gfsched.1
@@ -3,13 +3,13 @@
 .\" <http://shell.ipoline.com/~elmert/comp/docbook2X/> 
 .\" Please send any bug reports, improvements, comments, patches, 
 .\" etc. to Steve Cheng <steve@ggi-project.org>.
-.TH "GFSCHED" "1" "30 June 2010" "Gfarm" ""
+.TH "GFSCHED" "1" "28 December 2010" "Gfarm" ""
 
 .SH NAME
 gfsched \- ファイルシステムノードをスケジューリングし、利用可能なノードを表示
 .SH SYNOPSIS
 
-\fBgfsched\fR \fB-f \fIgfarm-URL\fB\fR [ \fB-D \fIドメイン名\fB\fR ] [ \fB-n \fIノード数\fB\fR ] [ \fB-LMlw\fR ]
+\fBgfsched\fR \fB-f \fIgfarm-URL\fB\fR [ \fB-D \fIドメイン名\fB\fR ] [ \fB-n \fIノード数\fB\fR ] [ \fB-LMclw\fR ]
 
 
 \fBgfsched\fR [ \fB-P \fIgfarm-URL\fB\fR ] [ \fB-D \fIドメイン名\fB\fR ] [ \fB-n \fIノード数\fB\fR ] [ \fB-LMlw\fR ]
@@ -52,6 +52,14 @@ gfsched \- ファイルシステムノードをスケジューリングし、利用可能なノードを表示
 指定したファイルについて、その複製を保持するファイルシステムノードを
 検索します。
 このオプションは、\fB-P\fR オプションと排他的です。
+.TP
+\fB-c\fR
+オプション「\fB-f\fR」で指定したファイルが存在しない
+場合で、かつ、このオプションを指定した場合、ファイルを新規作成した
+場合のスケジューリング情報を表示します。
+
+現在、このオプションを利用すると、指定したファイルを新規作成します。
+この挙動は将来変更される可能性があるのでご注意ください。
 .TP
 \fB-l\fR
 ホスト名のみならず、ポート番号も表示します。
